# simple_yew_app

./: .gitignore  CNAME  Cargo.toml  LICENSE  Trunk.toml  index.html  style.css  tailwind-bd7e7233cd79f4b5.css  tailwind.config.js  yew_app-11a79daf54c85020d1b5ec2a548a6463ca7dd5387a486f6be0cf79b35b97a5fe0f63b93268971b88ee270cc2674d31c2.js  yew_app-11a79daf54c85020d1b5ec2a548a6463ca7dd5387a486f6be0cf79b35b97a5fe0f63b93268971b88ee270cc2674d31c2_bg.wasm
.github/workflows/: deploy-gh-pages-outdated.yml  deploy-gh-pages.yml
docs/: CNAME  index.html  style-5ab438bcd7794e46.css  style-abbcdc137fb40a98.css  yew_app-3e7b40de9fe3835b5009cef696eb5a32875ccf84907eee067d0ca1c9cf2edf838d6c0aecde5c0d50afc1e3424d9d9dbf.js  yew_app-3e7b40de9fe3835b5009cef696eb5a32875ccf84907eee067d0ca1c9cf2edf838d6c0aecde5c0d50afc1e3424d9d9dbf_bg.wasm  yew_app-60290348e0b188a36e1d9f6586758bf7db2ee96354a98e35ce85c075422ae381edebcba096bbf237ba9529817cb6733c.js  yew_app-60290348e0b188a36e1d9f6586758bf7db2ee96354a98e35ce85c075422ae381edebcba096bbf237ba9529817cb6733c_bg.wasm
src/: main.rs
