[package]
name = "yew_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-dialogs = "0.2.0"
gloo-events = "0.2.0"
gloo-utils = "0.2.0"
wasm-bindgen = "0.2.89"
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
